heroku en update

--- a/app/views/layouts/_carousel.html.haml
+++ b/app/views/layouts/_carousel.html.haml
@@ -2,7 +2,7 @@
     .col-sm-12
         .heading-block{style:"margin-top:60px"}
             %h2.heading
-                Nasi partnerzy
+                =I18n.t('about.partners')
         %div.slider-partners
             %div.background-carousel
                 %div.inner-carousel
