--- a/app/views/layouts/_collborators.html.haml
+++ b/app/views/layouts/_collborators.html.haml
@@ -3,6 +3,7 @@
     .col-sm-12
       .heading-aj
         %h2.heading
-          Jesteśmy otwarci na współpracę
-        %p.sub-heading Zapraszamy międzynarodowych partnerów do współpracy w zakresie rozwoju, dostaw produktów, protokołu badawczo - naukowego i technologii
+          =I18n.t('collaborators.title')
+        %p.sub-heading 
+          =I18n.t('collaborators.title2')
    
