--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -8,7 +8,7 @@
           .widget.widget-about
             .col-md-4
               %h5.footer-title{style: "text-transform: none;"}
-                Obsługa w języku polskim
+                =I18n.t('footer.service_pl')
               %ul.contact
                 %li
                   %i.fa.fa-phone
@@ -18,7 +18,7 @@
                   =I18n.t('mail_pl')
             .col-md-4
               %h5.footer-title{style: "text-transform: none;"}
-                Obsługa w języku angielskim
+                =I18n.t('footer.service_en')
               %ul.contact
                 %li
                   %i.fa.fa-phone
