--- a/app/views/layouts/_model.html.haml
+++ b/app/views/layouts/_model.html.haml
@@ -3,35 +3,40 @@
     .col-sm-12
       .heading-block
         %h2.heading
-          Nasz
-          %span.color1 Model
+          =I18n.t('model.title')
     .row.margin-model-component
       .col-sm-4
         .feature-box.left
           %span.count 1
           .text
-            %h4.heading Import surowca na rynek UE dla wytwórców substancji czynnej
+            %h4.heading 
+              =I18n.t('model.content1')
         .feature-box.left
           %span.count 2
           .text
-            %h4.heading Dedykowana rozwiązania IT
+            %h4.heading 
+              =I18n.t('model.content2')
         .feature-box.left
           %span.count 3
           .text
-            %h4.heading Działalność Badawczo – Rozwojowa
+            %h4.heading 
+              =I18n.t('model.content3')
       .col-sm-4.content-center
         %i.med-icon.icon-i-mental-health.big-icon
       .col-sm-4
         .feature-box.right
           %span.count 4
           .text
-            %h4.heading Doradztwo prawne dla Twojego biznesu w Unii Europejskiej
+            %h4.heading 
+              =I18n.t('model.content4')
         .feature-box.right
           %span.count 5
           .text
-            %h4.heading Wprowadzania produktów do obrotu na rynek UE
+            %h4.heading 
+              =I18n.t('model.content5')
         .feature-box.right
           %span.count 6
           .text
-            %h4.heading Zastosowanie technologii blockchain
+            %h4.heading 
+              =I18n.t('model.content6')
 
