--- a/app/views/layouts/_new_about.html.haml
+++ b/app/views/layouts/_new_about.html.haml
@@ -2,20 +2,22 @@
   .row
     .col-sm-8.left_about.justify-style
       %p
-        CannaHub to platforma integrującą możliwości administracyjne, produkcyjne i logistyczne w celu dostarczania preparatów medycznych na bazie konopi.Nasze rozwiązania to realna poprawa jakości życia chorych i niepełnosprawnych Pacjentów w Polsce i na terenie krajów Unii Europejskiej, gdzie terapia medyczną marihuaną jest prawem pacjenta.
+        =I18n.t('new_about.p1')
       %p
-        Zgodnie z prawem, do obrotu oraz importu do Polski dopuszczone są leki gotowe pochodzenia roślinnego, jak również standaryzowane surowce w postaci roślinnej (suszone kwiatostany) oraz w postaci wyciągów przeznaczone do sporządzania leków recepturowych w aptece na podstawie preskrypcji lekarskiej bądź przeznaczone do dalszego procesu produkcyjnego jako substancje czynne.
+        =I18n.t('new_about.p2')
     .col-sm-4
       .news-slider.style-1
         .slider-items.justify-style
           %div
             %h4.heading
             %hr.hr-2.left/
-            %p Podstawę prawną w Polsce określa ustawa z dnia 7 lipca 2017 r. o zmianie ustawy o przeciwdziałaniu narkomanii oraz ustawy o refundacji leków, środków spożywczych specjalnego przeznaczenia żywieniowego oraz wyrobów medycznych.
+            %p 
+              =I18n.t('new_about.p3')
           %div
             %h4.heading 
             %hr.hr-2.left/
-            %p Od 1 listopada 2017 r. przepisy prawa regulują rejestrację, wytwarzanie i wprowadzanie do obrotu w Polsce preparatów medycznych na bazie konopi oraz stosowanie zarejestrowanych preparatów w lecznictwie.
+            %p 
+              =I18n.t('new_about.p4')
         .slider-nav
           .left
             %i.fa.fa-angle-left
