--- a/app/views/layouts/_slider.html.haml
+++ b/app/views/layouts/_slider.html.haml
@@ -9,7 +9,7 @@
         .col-sm-12.content-center{style: "margin-top: 75px"}
           =image_tag("cannahub.png", alt: "Cannahub", class: "img-resposive-x")
         .col-sm-12.content-center{style: "font-size: 18px; margin-top: 5px; font-weight: 800;"}
-          PLATFORMA KOMUNIKACYJNA
+          =I18n.t('slider.title')
 
 
 
