--- a/app/views/layouts/_terapy.html.haml
+++ b/app/views/layouts/_terapy.html.haml
@@ -2,4 +2,5 @@
   .container
     .row
       .col-sm-7.col-sm-offset-5.col-lg-5.col-lg-offset-7
-        %p{style: "font-size: 24px; text-transform: uppercase; margin-top: 50px;font-weight: 900; text-shadow: 1px 1px 2px #b0a0a0;"} Terapia medyczną marihuaną jest dopuszczona w 14 krajach Unii Europejskiej.
+        %p{style: "font-size: 24px; text-transform: uppercase; margin-top: 50px;font-weight: 900; text-shadow: 1px 1px 2px #b0a0a0;"} 
+          =I18n.t('terapy.title')
