--- a/app/views/layouts/_new_about.html.haml
+++ b/app/views/layouts/_new_about.html.haml
@@ -1,4 +1,4 @@
-.container.mt-80{style: "margin-top: -70px"}
+.container.mt-80.about-new-top
   .row
     .col-sm-8.left_about.justify-style
       %p
