--- a/app/views/layouts/_soon.html.haml
+++ b/app/views/layouts/_soon.html.haml
@@ -2,41 +2,41 @@
   .container
     %h2.heading-text=I18n.t('soon.title')  
     .row
-      .col-sm-6
+      .col-sm-6.media-help2
         .health-tips-1
           %ul.tips
             %li
-              %span.count #1
-              %h4 
+              %span.count #
+              %h4.soon-icon
                 =I18n.t('soon.content1')
             %li
-              %span.count #3
-              %h4 
+              %span.count #
+              %h4.soon-icon 
                 =I18n.t('soon.content2')
             %li
-              %span.count #5
-              %h4 
+              %span.count #
+              %h4.soon-icon 
                 =I18n.t('soon.content3')
             %li
-              %span.count #7
-              %h4 
+              %span.count #
+              %h4.soon-icon 
                 =I18n.t('soon.content4')
-      .col-sm-6
+      .col-sm-6.media-help
         .health-tips-2
           %ul.tips
             %li
-              %span.count #2
-              %h4 
+              %span.count #
+              %h4.soon-icon 
                 =I18n.t('soon.content5')
             %li
-              %span.count #4
-              %h4 
+              %span.count #
+              %h4.soon-icon 
                 =I18n.t('soon.content6')
             %li
-              %span.count #6
-              %h4 
+              %span.count #
+              %h4.soon-icon
                 =I18n.t('soon.content7')
             %li
-              %span.count #8
-              %h4 
+              %span.count #
+              %h4.soon-icon 
                 =I18n.t('soon.content8')
