--- a/app/views/layouts/_slider.html.haml
+++ b/app/views/layouts/_slider.html.haml
@@ -6,7 +6,7 @@
       / Slide 1
       %li{"data-description" => "Cannahub.", "data-easein" => "default", "data-easeout" => "default", "data-fsmasterspeed" => "1500", "data-fsslotamount" => "7", "data-fstransition" => "fade", "data-index" => "rs-129", "data-masterspeed" => "default", "data-rotate" => "0", "data-saveperformance" => "off", "data-slotamount" => "default", "data-thumb" => "", "data-title" => "A STUDY ON HAPPINESS", "data-transition" => "parallaxvertical"}
         / MAIN IMAGE
-        .col-sm-12.content-center{style: "margin-top: 75px"}
+        .col-sm-12.content-center
           =image_tag("cannahub.png", alt: "Cannahub", class: "img-resposive-x")
         .col-sm-12.content-center{style: "font-size: 18px; margin-top: 5px; font-weight: 800;"}
           =I18n.t('slider.title')
