--- a/app/views/layouts/_terapy.html.haml
+++ b/app/views/layouts/_terapy.html.haml
@@ -1,4 +1,4 @@
-.mt-80.pt-80.pb-80.parallax{"data-speed" => "8", :style => "background-image: url(#{image_url('weed6.jpg')}); background-position: 50% -96.875px;"}
+.mt-80.pt-80.pb-80.parallax{"data-speed" => "8"}
   .container
     .row
       .col-sm-7.col-sm-offset-5.col-lg-5.col-lg-offset-7
