--- a/app/views/layouts/_carousel.html.haml
+++ b/app/views/layouts/_carousel.html.haml
@@ -9,9 +9,6 @@
                     =link_to image_tag("logotypes/grl-logo.png",width: '250px', class: "images", alt: "Grass Roots Lobbing Sp. z o.o."), "http://www.grassrootslobbing.pl", target: "_blank"
             %div.background-carousel
                 %div.inner-carousel
-                    =link_to image_tag("logotypes/ch-logo.png",width: '250px', class: "images",alt: "Cannabis House Sp. z o.o."), "http://www.cannabishouse.com.pl", target: "_blank"
-            %div.background-carousel
-                %div.inner-carousel
                     =link_to image_tag("logotypes/thc-logo.png",width: '250px', class: "images",alt: "TRADE HEMP CENTER Sp. z o.o."), "http://www.tradehempcenter.pl", target: "_blank"
             %div.background-carousel
                 %div.inner-carousel
@@ -19,3 +16,9 @@
             %div.background-carousel
                 %div.inner-carousel
                     =link_to image_tag("logotypes/glm-logo.png",width: '250px', class: "images", alt: "Green line media"), "https://www.greenlinemedia.eu", target: "_blank"
+            %div.background-carousel
+                %div.inner-carousel
+                    =link_to image_tag("logotypes/bioinfo-logo.png",width: '250px', class: "images", alt: "Green line media"), "https://bioinfo.pl", target: "_blank"
+            %div.background-carousel
+                %div.inner-carousel
+                    =link_to image_tag("logotypes/eh-logo.png",width: '250px', class: "images", alt: "Green line media"), "https://eurohemp.eu/pl", target: "_blank"
