--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -42,6 +42,6 @@
         .col-sm-12
           %span.text-comapny 
             =I18n.t('footer.copywright')
-            =link_to "Canna Hub Sp. z o.o. ", controller: "static_pages_controller", action: "home"
+            =link_to "Canna Hub Sp. z o.o. ", static_pages_controller_home_path
             =I18n.t('footer.reserved')
  
