--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,34 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="jumbotron" style="background-image: url('images/slider-10.jpg')">
+        <div class="container">
+            <div class="row flex-row">
+                <div class="col-sm-8 valign-center">
+                    <h1 class="heading inverse">Expert Consultation at your convenience.</h1>
+                    <a href="about.html" class="btn btn-primary">Read More</a> &nbsp;&nbsp; <a href="why-us.html" class="btn btn-black">Why Medwise</a>
+                </div>
+                <div class="col-sm-4">
+                    <div class="slider-box-appointment">
+                        <div class="header">
+                            <h3 class="heading font-2 text-center">Register your Participation</h3>
+                        </div>
+                        <hr class="hr-2">
+                        <div class="body">
+                          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                            <div class="form-group">
+                              <%= f.email_field :email, autofocus: true, placeholder: "Your Email", class: "form-control" %>
+                            </div>
+                            <div class="form-group">
+                              <%= f.password_field :password, placeholder: "Type your password", class: "form-control" %>
+                            </div>
+                            <div class="form-group">
+                              <%= f.password_field :password_confirmation, placeholder: "Confirm your password", class: "form-control" %>
+                            </div>
+                            <div class="form-group">
+                              <%= f.submit "Register", class: "btn btn-info" %>
+                            </div>
+                          <% end %>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
