--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -17,41 +17,27 @@
             %li
               %span=I18n.t('header.email_us')
               =I18n.t('e-mail')
-  %nav.navbar.navbar-default
-    / Navigation Bar
-    .container
-      .navbar-header
-        %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#main-navigation", "data-toggle" => "collapse", :type => "button"}
-          %span.sr-only=I18n.t('header.menu')
-          %i.fa.fa-bars
-        =link_to image_tag("logo.png", alt: "logo"), static_pages_controller_home_path, class: 'navbar-brand', style: "margin-top: 7px;"
-        / Replace with your Logo
-      #main-navigation.collapse.navbar-collapse
-        / Main Menu
-        %ul.nav.navbar-nav.navbar-right
-          %li
-            =link_to I18n.t('header.home'), static_pages_controller_home_path
-          %li
-            =link_to I18n.t('header.about'), static_pages_controller_about_path , action: "about"
-            / %ul.sub-menu
-            /   / Sub Menu
-            /   %li
-            /     =link_to I18n.t('header.ch_stow'), "https://www.cannabishouse.eu", target: "_blank"
-            /   %li
-            /     =link_to I18n.t('header.thc'), "https://www.tradehempcenter.pl", target: "_blank"
-            /   %li
-            /     =link_to I18n.t('header.grl'), "https://www.grassrootslobbing.pl", target: "_blank"
-          %li
-            = link_to I18n.t('header.contact'),static_pages_controller_contact_path
           - if current_user
-            %li
-              = link_to I18n.t('header.logout'), destroy_user_session_path, method: :delete
+            = link_to I18n.t('header.logout'), destroy_user_session_path, method: :delete , class: "btn btn-primary btn-xs"
           - else
-            %li
-              = link_to I18n.t('header.login'), new_user_session_path
-            %span.emergency
-              / Emergency Number
-              %i.fa.fa-mobile
-              %span.number=I18n.t('phone_nr')
-              %br/
-              %span.sub-text=I18n.t('office_nr')
+            = link_to I18n.t('header.blockchain'), new_user_registration_path, class: "btn btn-primary btn-xs"
+            %button.btn.btn-primary.btn-xs{"data-target" => "#modal-booking", "data-toggle" => "modal", type: "button"} Log In
+          -if @wallet
+            %button.btn.btn-primary.btn-xs{"data-target" => "#modal-checkcode", "data-toggle" => "modal", type: "button"} kup
+
+#modal-booking.modal.fade{"data-open-delay" => "0", "data-open-onload" => "false", role: "dialog", style: "display: none;", tabindex: "-1"}
+  .modal-dialog.modal-lg{role: "document"}
+    .modal-content
+      %button.close{"aria-label" => "Close", "data-dismiss" => "modal", type: "button"}
+        %i.fa.fa-times
+      .modal-body
+        .container-fluid
+          = form_for(:user, url: session_path(:user)) do |f|
+            .field
+              = f.email_field :email, autofocus: true, placeholder: "Your Email", class: "input form-control"
+            .field
+              = f.password_field :password, autocomplete: "current-password", placeholder: "Password", class: "input form-control"
+            .actions
+              = f.submit "Login", class: "btn btn-primary"
+
+= render 'blockchain/choose_payment'
