Refactor naming of controllers

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -25,10 +25,10 @@
                   =I18n.t('office_nr_en')
                   %br
                   %i.fa.fa-envelope
-                  =I18n.t('mail_en')   
-            .col-md-4         
+                  =I18n.t('mail_en')
+            .col-md-4
               %h5.footer-title{style: "text-transform: none;"}
-                Canna Hub Sp. Z o.o. 
+                Canna Hub Sp. Z o.o.
               %ul.contact
                 %li
                   %i.fa.fa-map-marker
@@ -40,8 +40,7 @@
     .container
       .row
         .col-sm-12
-          %span.text-comapny 
+          %span.text-comapny
             =I18n.t('footer.copywright')
-            =link_to "Canna Hub Sp. z o.o. ", static_pages_controller_home_path
+            =link_to "Canna Hub Sp. z o.o. ", static_pages_home_path
             =I18n.t('footer.reserved')
- 
