--- a/app/views/static_pages/partners.html.haml
+++ b/app/views/static_pages/partners.html.haml
@@ -5,13 +5,13 @@
         %li
           =link_to image_tag("logotypes/grl-logo.png", alt: "Grass Roots Lobbing Sp. z o.o."), "http://www.grassrootslobbing.pl", target: "_blank"
         %li
-          =link_to image_tag("logo.png", alt: "logo"), {action: 'home', controller: 'static_pages_controller'}
+          =link_to image_tag("logo.png", alt: "logo"), {action: 'home', controller: 'static_pages'}
         %li
           =link_to image_tag("logotypes/ch-logo.png", alt: "Cannabis House Sp. z o.o."), "http://www.cannabishouse.com.pl", target: "_blank"
         %li
           =link_to image_tag("logotypes/thc-logo.png", alt: "TRADE HEMP CENTER Sp. z o.o."), "http://www.tradehempcenter.pl", target: "_blank"
         %li
-          =link_to image_tag("logotypes/bioinfo-logo.png", alt: "BIOINFOBANK"), "https://www.bioinfo.pl", target: "_blank"          
+          =link_to image_tag("logotypes/bioinfo-logo.png", alt: "BIOINFOBANK"), "https://www.bioinfo.pl", target: "_blank"
         %li
           =link_to image_tag("logotypes/chs-logo.png", alt: "Stowarzyszenie Cannabis House"), "https://www.cannabishouse.eu", target: "_blank"
         %li
