--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -18,26 +18,12 @@
               %span=I18n.t('header.email_us')
               =I18n.t('e-mail')
           - if current_user
-            = link_to I18n.t('header.logout'), destroy_user_session_path, method: :delete , class: "btn btn-primary btn-xs"
+            -if @wallet
+              %button.btn.btn-success.btn-xs{"data-target" => "#modal-checkcode", "data-toggle" => "modal", type: "btn btn-success btn-xs"} kup
+            = link_to 'Rybka', blockchain_dashboard_path, class: "btn btn-success btn-xs"
+            = link_to I18n.t('header.logout'), destroy_user_session_path, method: :delete , class: "btn btn-success btn-xs"
           - else
-            = link_to I18n.t('header.blockchain'), new_user_registration_path, class: "btn btn-primary btn-xs"
-            %button.btn.btn-primary.btn-xs{"data-target" => "#modal-booking", "data-toggle" => "modal", type: "button"} Log In
-          -if @wallet
-            %button.btn.btn-primary.btn-xs{"data-target" => "#modal-checkcode", "data-toggle" => "modal", type: "button"} kup
-
-#modal-booking.modal.fade{"data-open-delay" => "0", "data-open-onload" => "false", role: "dialog", style: "display: none;", tabindex: "-1"}
-  .modal-dialog.modal-lg{role: "document"}
-    .modal-content
-      %button.close{"aria-label" => "Close", "data-dismiss" => "modal", type: "button"}
-        %i.fa.fa-times
-      .modal-body
-        .container-fluid
-          = form_for(:user, url: session_path(:user)) do |f|
-            .field
-              = f.email_field :email, autofocus: true, placeholder: "Your Email", class: "input form-control"
-            .field
-              = f.password_field :password, autocomplete: "current-password", placeholder: "Password", class: "input form-control"
-            .actions
-              = f.submit "Login", class: "btn btn-primary"
+            = link_to 'Rejestracja', new_user_registration_path, class: "btn btn-success btn-xs"
+            = link_to 'Logowanie', new_user_session_path, class: "btn btn-success btn-xs"
 
 = render 'blockchain/choose_payment'
