Make images working with heroku

--- a/app/views/blockchain/dashboard.html.haml
+++ b/app/views/blockchain/dashboard.html.haml
@@ -1,4 +1,4 @@
-.jumbotron{:style => "background-image: url(#{image_url 'register_background'})"}
+.jumbotron{:style => "background-image: url(#{image_url 'register_background.jpg'})"}
 	.container
 		.row.flex-row
 			.col-sm-6.col-sm-offset-3
