modified:   app/assets/stylesheets/application.css 	modified:   app/views/layouts/_collborators.html.haml 	modified:   app/views/layouts/_model.html.haml 	modified:   app/views/layouts/_new_about.html.haml 	modified:   app/views/layouts/_soon.html.haml 	modified:   app/views/layouts/_terapy.html.haml 	new file:   app/views/layouts/development.html.haml 	new file:   app/views/layouts/job.html.haml 	new file:   app/views/layouts/requirements.html.haml

--- a/app/views/layouts/_new_about.html.haml
+++ b/app/views/layouts/_new_about.html.haml
@@ -1,4 +1,4 @@
-.container.mt-80.about-new-top
+.container
   .row
     .col-sm-8.left_about.justify-style
       %p
@@ -7,10 +7,10 @@
         =I18n.t('new_about.p2')
     .col-sm-4
       .news-slider.style-1
-        .slider-items.justify-style
+        .justify-style
           %div
             %h4.heading
-            %hr.hr-2.left/
+            %hr/
             %p 
               =I18n.t('new_about.p3')
           %div
@@ -18,8 +18,3 @@
             %hr.hr-2.left/
             %p 
               =I18n.t('new_about.p4')
-        .slider-nav
-          .left
-            %i.fa.fa-angle-left
-          .right
-            %i.fa.fa-angle-right
