--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -164,6 +164,7 @@ body {
     margin-top: 40px;
     margin-bottom: 0px;
     height: 350px !important;
+    text-align: center;
   }
 }
 
@@ -317,6 +318,24 @@ body {
 
 @media screen and (max-width: 600px) {
   .soon-icon {
+    text-align: center;
+    padding-left: 75px;
+    margin-top: 14px;
+    width: 280px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .development-icon {
+    text-align: left;
+    padding-left: 75px;
+    margin-top: 14px;
+    width: 280px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .requirements-icon {
     text-align: left;
     padding-left: 75px;
     margin-top: 14px;
