--- a/app/views/layouts/_soon.html.haml
+++ b/app/views/layouts/_soon.html.haml
@@ -1,42 +1,24 @@
-.health-tips.mt-80
+.mt-80
   .container
-    %h2.heading-text=I18n.t('soon.title')  
+    %h2=I18n.t('soon.title')  
     .row
-      .col-sm-6.media-help2
+      .col-sm-9
         .health-tips-1
-          %ul.tips
+          %ul
             %li
-              %span.count #
+              
               %h4.soon-icon
                 =I18n.t('soon.content1')
             %li
-              %span.count #
+              
               %h4.soon-icon 
                 =I18n.t('soon.content2')
             %li
-              %span.count #
+              
               %h4.soon-icon 
                 =I18n.t('soon.content3')
             %li
-              %span.count #
+              
               %h4.soon-icon 
                 =I18n.t('soon.content4')
-      .col-sm-6.media-help
-        .health-tips-2
-          %ul.tips
-            %li
-              %span.count #
-              %h4.soon-icon 
-                =I18n.t('soon.content5')
-            %li
-              %span.count #
-              %h4.soon-icon 
-                =I18n.t('soon.content6')
-            %li
-              %span.count #
-              %h4.soon-icon
-                =I18n.t('soon.content7')
-            %li
-              %span.count #
-              %h4.soon-icon 
-                =I18n.t('soon.content8')
+      
